# openFrameworks-template

./: CMakeLists.txt  README.md
cmake/: FindOpenFrameworks.cmake
